# SeedFrame

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
completion_provider_integrations/seedframe_anthropic/: Cargo.toml
core/: Cargo.toml
core/examples/: advanced_tool_calls.rs  agent_with_pinecone.rs  extractors.rs  simple_client.rs  simple_tool_calls.rs  tool_calls.rs
core/src/: document.rs  error.rs  lib.rs  prelude.rs
core/src/completion/: mod.rs
core/src/embeddings/: embedding.rs  mod.rs  model.rs
core/src/loader/: direct.rs  mod.rs  publishing.rs
core/src/loader/builtins/: mod.rs
core/src/loader/builtins/file_loaders/: file_once_loader.rs  file_updating_loader.rs  mod.rs  utils.rs
core/src/providers/: mod.rs  openai.rs
core/src/providers/completions/: deepseek.rs  mod.rs  openai.rs  xai.rs
core/src/providers/embeddings/: mod.rs  openai.rs
core/src/tools/: mod.rs
core/src/vector_store/: in_memory_vec_store.rs  mod.rs  pinecone.rs
embedding_provider_integrations/seedframe_voyageai/: Cargo.toml
embedding_provider_integrations/seedframe_voyageai/src/: lib.rs
integrations/completion_providers/seedframe_anthropic/: Cargo.toml  README.md
integrations/completion_providers/seedframe_anthropic/src/: lib.rs  utils.rs
integrations/embedding_providers/seedframe_voyageai/: Cargo.toml  README.md
integrations/embedding_providers/seedframe_voyageai/src/: lib.rs
integrations/seedframe_webscraper/: Cargo.toml  README.md
integrations/seedframe_webscraper/src/: lib.rs
integrations/vector_stores/seedframe_pinecone/: Cargo.toml  README.md
integrations/vector_stores/seedframe_pinecone/src/: lib.rs
proc_macros/: Cargo.toml
proc_macros/src/: client.rs  embedder.rs  lib.rs  loader.rs  tool.rs  vector_store.rs
src/: lib.rs
src/embedder/: embedding.rs  mod.rs  vector_store.rs
src/loader/: direct.rs  mod.rs  publishing.rs
