[package]
name = "seedframe"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
glob = "0.3.2"
pdf-extract = "0.8.0"
reqwest = { version = "0.12.12", default-features=false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.42.0", features = ["full"] }
uuid = {version="1.11.1", features = ["v4"]}
walkdir = "2.5.0"
seedframe_macros =  { path = "../proc_macros"}
notify = "8.0.0"

[dev-dependencies]
tempfile = "3.16.0"
