[package]
name = "seedframe"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A clean, macro driven Rust library for building LLM apps"
repository = "https://github.com/Shifta-Robel/SeedFrame"
readme = "../README.md"

[dependencies]
async-trait = "0.1"
glob = "0.3"
pdf-extract = {version="0.8", optional = true }
reqwest = { version = "0.12", default-features=false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["rt-multi-thread", "time", "macros"]}
uuid = {version="1.11", features = ["v4"]}
walkdir = "2.5"
seedframe_macros =  { version="0.1", path = "../proc_macros"}
notify = "8.0"
tracing = "0.1"
schemars = "0.8"
thiserror = "2.0"
dashmap = "6.1"

[dev-dependencies]
tokio = { version = "1.44", features = ["fs"]}
tempfile = "3.16"
tracing-subscriber = "0.3"

[features]
pdf = ["pdf-extract"]
