[package]
name = "seedframe_macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "procedural macro lib for SeedFrame"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = {version="2.0.91", features = ["full", "fold"]}
thiserror = "2.0.12"
serde_json = "1.0.138"
