[package]
name = "seedframe_macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Shifta-Robel/SeedFrame/tree/main/proc_macros"
description = "procedural macro lib for SeedFrame"

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = {version="2.0", features = ["full", "fold"]}
thiserror = "2.0"
serde_json = "1.0"
