[package]
name = "seedframe_webscraper"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Webscraper loader integration crate for SeedFrame"

[dependencies]
seedframe = {path = "../../core/"}
async-trait = "0.1.88"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full", "test-util"] }
chrono = { version = "0.4.40", features = ["serde"] }
scraper = "0.23.1"

[dev-dependencies]
mockito = "1.7.0"
