[package]
name = "seedframe_webscraper"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/Shifta-Robel/SeedFrame/tree/main/integrations/seedframe_webscraper"
description = "Webscraper loader integration crate for SeedFrame"

[dependencies]
seedframe = {version = "0.1", path = "../../core/"}
async-trait = "0.1"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full", "test-util"] }
chrono = { version = "0.4", features = ["serde"] }
scraper = "0.23"

[dev-dependencies]
mockito = "1.7"
