[package]
name = "seedframe_anthropic"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Anthropic AI integration crate for SeedFrame"

[dependencies]
seedframe = {path = "../../../core/"}
async-trait = "0.1.88"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
regex = "1.11.1"
