[package]
name = "seedframe_anthropic"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Shifta-Robel/SeedFrame/tree/main/integrations/completion_providers/seedframe_anthropic"
description = "Anthropic AI integration crate for SeedFrame"

[dependencies]
seedframe = { version="0.1", path = "../../../core/"}
async-trait = "0.1"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
