[package]
name = "seedframe_voyageai"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Voyage AI integration crate for SeedFrame"

[dependencies]
seedframe = {path = "../../../core/"}
async-trait = "0.1.88"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.42.0", features = ["full"] }
