[package]
name = "seedframe_pinecone"
version = "0.1.0"
edition = "2021"

[dependencies]
seedframe = {path = "../../../core/"}
pinecone-sdk = "0.1.2"
async-trait = "0.1.88"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full", "test-util"] }
